--- a/Views/Styles/Themes/TvModern/Blue.css
+++ b/Views/Styles/Themes/TvModern/Blue.css
@@ -67,7 +67,7 @@ div.BackgroundInfo {
 div#PvrContainer,
 div#EpgContainer {
     color: #fff;
-    background-image: url('Blue/epg1.png');
+    background-image: url('Blue/epg.png');
 }
 
 div#PvrOptions,
