Actualizacion EPG y PVR

--- a/Views/Styles/General.css
+++ b/Views/Styles/General.css
@@ -213,6 +213,7 @@ div#InfoContainer {
     margin-bottom: 2%;
     color: #fff;
     height: 20%;
+    border-radius: 6px;
 }
 
 div.ChannelNumber {
