--- a/Views/Styles/Themes/TvModern/Blue.css
+++ b/Views/Styles/Themes/TvModern/Blue.css
@@ -156,7 +156,7 @@ div.PvrOptionsButton,
 #PvrLogoContainer,
 div.RecordingManualOptionsButton,
 div.RecordingOptionsButton {
-    background: #245669;
+    background: rgba(0, 0, 0, 0.29);
 }
 
 
