--- a/Views/Layouts/Tv/Styles/TvModern.css
+++ b/Views/Layouts/Tv/Styles/TvModern.css
@@ -835,6 +835,8 @@ div#BarUsedSize {
     position: absolute;
     border-radius: 6px;
     text-align: center;
+
+    display: none;
 }
 
 div#RecordPlayOptions {
