Actualizacion EPG y PVR

--- a/Views/Styles/Themes/TvModern/Blue.css
+++ b/Views/Styles/Themes/TvModern/Blue.css
@@ -191,7 +191,7 @@ div#ChannelRow7 {
 }
 
 div#BarPosition {
-    background-color: #0396a6;
+    background-color: rgb(32, 92, 114);
 }
 
 div.BarPosition {
