--- a/Views/Layouts/Menu/Styles/Fullscreen.css
+++ b/Views/Layouts/Menu/Styles/Fullscreen.css
@@ -10,6 +10,10 @@ and open the template in the editor.
 
 /***************************** [CONTENEDORES] *****************************/
 
+#MainLogo {
+    max-height: 30%;
+}
+
 div#MenuContainer {
     width: 100%;
     height: 100%;
