Actualizacion EPG y PVR

--- a/Views/Layouts/Menu/Styles/Fullscreen.css
+++ b/Views/Layouts/Menu/Styles/Fullscreen.css
@@ -109,7 +109,7 @@ div#MenuDescription {
 
 #MenuChevronLeft,
 #MenuChevronRight {
-    top: 45%;
+    bottom: 10%;
     position: fixed;
     font-size: 50px;
 }
