--- a/Views/Layouts/Menu/Styles/Fullscreen.css
+++ b/Views/Layouts/Menu/Styles/Fullscreen.css
@@ -31,8 +31,8 @@ div#MenuContainer {
 
 div#MenuDate {
     width: 25%;
-    height: 12.5%;
-    font-size: 47px;
+    height: 9%;
+    font-size: 60px;
     text-align: right;
     top: 5%;
     position: fixed;
@@ -40,18 +40,18 @@ div#MenuDate {
     border-right: 1px solid;
     padding-right: 1%;
     margin-right: 1%;
-    text-shadow: 0px 0px 13px rgba(0,0,0,0.7);
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
 }
 
 div#MenuHour {
-    width: 19%;
+    width: 15%;
     height: 5%;
-    font-size: 90px;
+    font-size: 60px;
     top: 5%;
     position: fixed;
-    right: 2%;
-    text-align: center;
-    text-shadow: 0px 0px 13px rgba(0,0,0,0.7);
+    right: 5%;
+    text-align: left;
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
 }
 
 div#MenuWeather,
@@ -65,13 +65,13 @@ div#MenuDate {
 }
 
 div#MenuWeather {
-    width: 35%;
+    width: 25%;
     font-size: 40px;
     text-align: center;
-    top: 20%;
+    top: 15%;
     position: fixed;
     right: 2%;
-    text-shadow: 0px 0px 13px rgba(0,0,0,0.7);
+    text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
 }
 
 
@@ -85,7 +85,7 @@ div#WeatherSummary {
 
 div#TemperatureGroup {
     float: left;
-    width: 45%;
+    width: 59%;
 }
 
 div#MenuSelected {
