Actualizacion EPG y PVR

--- a/Views/Layouts/Menu/Styles/Fullscreen.css
+++ b/Views/Layouts/Menu/Styles/Fullscreen.css
@@ -29,6 +29,10 @@ div#MenuContainer {
     font-size: 36px;
 }
 
+.BackgroundsMenu {
+    float: left;
+}
+
 div#MenuDate {
     width: 25%;
     height: 9%;
