Actualizacion EPG y PVR

--- a/Views/Layouts/Menu/Styles/Fullscreen.css
+++ b/Views/Layouts/Menu/Styles/Fullscreen.css
@@ -30,7 +30,11 @@ div#MenuContainer {
 }
 
 .BackgroundsMenu {
-    float: left;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
 div#MenuDate {
