--- a/Views/Styles/General.css
+++ b/Views/Styles/General.css
@@ -294,3 +294,25 @@ div#ChannelNumber {
     color:#ffffff;
     text-shadow: 0.5px 0.5px 0.5px #6a6a6a;
 }
+
+/********************* DIGITAL CHANNEL *****************************/
+
+#ContentFrame {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    display: none;
+    position: fixed;
+}
+
+#ImageDigitalChannel{
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    display: none;
+}
+
+div#DigitalChannel {
+
+}
