--- a/Views/Styles/General.css
+++ b/Views/Styles/General.css
@@ -114,6 +114,7 @@ TITULO SIN NUMEROS Y SIMBOLOS
 
 
 body, html {
+    background-color: transparent;
     background-image:url(tv:);
     background:url(tv:);
     -webkit-background-composite: clear;
