--- a/Views/Layouts/Contents/Templates/exepciones.html
+++ b/Views/Layouts/Contents/Templates/exepciones.html
@@ -14,6 +14,8 @@
     height: 450px;
     width: 100%;
     resize: none;
+    background-color: black;
+    color: greenyellow;
 }
 #save{
     text-decoration: none;
@@ -37,12 +39,13 @@
     padding-right: 40px;
     background-color: #e68507d7;
 }
+
 </style>
 <body>
     <div>
         <form id="form" method="POST">
             Excepción de dispositivos DHCP: <br/>
-            <textarea name="data" id="data" cols="84" rows="7" placeholder="Escribe aqui un texto"></textarea>
+            <textarea name="data" id="data" cols="84" rows="7"></textarea>
             <button id="save">Guardar</button>
             <button id="restart">Reiniciar servicio DHCP</button>
         </form>
