--- a/Views/Layouts/Contents/Templates/exepciones.html
+++ b/Views/Layouts/Contents/Templates/exepciones.html
@@ -15,7 +15,7 @@
     width: 100%;
     resize: none;
     background-color: black;
-    color: greenyellow;
+    color: #21fd34;
 }
 #save{
     text-decoration: none;
