--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -14,8 +14,8 @@ The above copyright notice and this permission notice shall be included in all c
 
 <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="76x76" href="../../../../Assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" href="../../../../Assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="~/~/~/~/Assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" href="~/~/~/~/Assets/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>BBINCO</title>
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
@@ -23,9 +23,9 @@ The above copyright notice and this permission notice shall be included in all c
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <!-- CSS Files -->
-    <link href="../../../../Assets/css/material-dashboard.css?v=2.1.2" rel="stylesheet" />
+    <link href="~/~/~/~/Assets/css/material-dashboard.css?v=2.1.2" rel="stylesheet" />
     <!-- CSS Just for demo purpose, don't include it in your project -->
-    <link href="../../../../Assets/demo/demo.css" rel="stylesheet" />
+    <link href="~/~/~/~/Assets/demo/demo.css" rel="stylesheet" />
 
 </head>
 <style>
