--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -168,7 +168,7 @@ The above copyright notice and this permission notice shall be included in all c
                         <div class="card card-profile">
                             <div class="card-avatar">
                                 <a href="javascript:;">
-                                    <img class="img" id="DeviceImage" src="../assets/img/blank.png"/>
+                                    <img class="img" id="DeviceImage" src="../../../../../Assets/img/blank.png"/>
                                 </a>
                             </div>
                             <div class="card-body">
