--- a/Views/Layouts/Contents/Templates/Devices.html
+++ b/Views/Layouts/Contents/Templates/Devices.html
@@ -557,7 +557,7 @@ The above copyright notice and this permission notice shall be included in all c
         DeviceLastUpdate.innerHTML = '<i class="material-icons">access_time</i> '+DeviceInfoList[RowDeviceSelected][2];
 
         DeviceSelectedId = DevicesList[RowDeviceSelected][0];
-        DeviceImage.src = '../assets/img/'+DevicesList[RowDeviceSelected][3]+'.png';
+        DeviceImage.src = '../../../../../Assets/img/'+DevicesList[RowDeviceSelected][3]+'.png';
         DeviceCode.textContent = DevicesList[RowDeviceSelected][1];
         DeviceMacAddress.textContent = DevicesList[RowDeviceSelected][2];
         DeviceRegisterDate.innerHTML = '<i class="material-icons">calendar_today</i> '+DevicesList[RowDeviceSelected][4];
