--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -147,6 +147,8 @@ function getLocations(){
     aux.push(element.id_paquete);
     LocationsToTable.push(aux);
   });
+
+  getTables();
   console.log(LocationsToTable);
 
 }
