--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -43,7 +43,7 @@ The above copyright notice and this permission notice shall be included in all c
                   <p class="card-category">Complete your profile</p>
                 </div>
                 <div class="card-body">
-                  <table id="LocationsTable" class="ui celled table" style="width:100%"></table>
+                  <table id="LocationsTable" class="display" width="100%"></table>
                 </div>
               </div>
             </div>
@@ -149,7 +149,7 @@ function getLocations(){
   });
 
   getTables();
-  console.log(LocationsToTable);
+  console.log(AllLocations);
 
 }
 
