--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -208,7 +208,7 @@ function getInfo(){
   }); 
   $.ajax({
     type: "POST",
-    url: SourceController+'Module.php',
+    url: SourceController+'Packages.php',
     data: { 
         Option    : 'GetAllPackages',
     }, 
