--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -160,7 +160,7 @@ function getLocations(){
       aux.push('Inactivo');
     }
    AllModules.forEach(module => {
-      if(module.Id == location.id){
+      if(module.Id == location.id_modulo){
         aux.push(module.Name);
       }
     });
