--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -161,7 +161,8 @@ function getLocations(){
     }
    AllModules.forEach(module => {
       if(module.Id == location.id_modulo){
-        if(module.name === 'Welcome'){
+        debugger
+        if(module.name == 'Welcome'){
           aux.push('Menu');
         }else{
           aux.push(module.Name);
