--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -43,8 +43,18 @@ The above copyright notice and this permission notice shall be included in all c
                   <p class="card-category">Complete your profile</p>
                 </div>
                 <div class="card-body">
-                  <table id="LocationsTable" class="display" width="100%"></table>
-                </div>
+                  <div class="tab-content">
+                      <div class="tab-pane active" id="profile">
+                          <table id="LocationsTable" class="ui celled table" style="width:100%"></table>
+                      </div>
+                      <div class="tab-pane" id="messages">
+
+                      </div>
+                      <div class="tab-pane" id="settings">
+
+                      </div>
+                  </div>
+              </div>
               </div>
             </div>
             <div class="col-md-4">
