--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -201,7 +201,9 @@ function getTables(){
         { title: "Mensajes" },
         { title: "Pantalla de inicio" },
         { title: "Paquete asignado" },
-    ]
+    ],
+    "paging": false,
+    "searching": false
 });
 }
 
