--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -61,12 +61,11 @@ The above copyright notice and this permission notice shall be included in all c
                 <div class="col-md-4">
                   <div class="card card-profile">
                     <div class="card-body">
-                      <h6 class="card-category text-gray">CEO / Co-Founder</h6>
-                      <h4 class="card-title">Alec Thompson</h4>
-                      <p class="card-description">
-                        Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
-                      </p>
-                      <a href="javascript:;" class="btn btn-primary btn-round">Follow</a>
+                      <div class="row">
+                        
+                      </div>
+                      <a href="javascript:;" class="btn btn-primary btn-round">Actualizar</a>
+                      <a href="javascript:;" class="btn btn-primary btn-round">Registrar</a>
                     </div>
                   </div>
                 </div>
