--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -61,13 +61,16 @@ The above copyright notice and this permission notice shall be included in all c
                 <div class="col-md-4">
                   <div class="card card-profile">
                     <div class="card-body">
-                   
-                      <h6 class="card-category text-gray">Locacion</h6>
+                      
+                      <div>
+                        <h6 class="card-category text-gray">Locacion</h6>
                         <select name="" id="">
                           <option value="1">jklñ</option>
                           <option value="2"  selected>jklñ</option>
                           <option value="3">jklñ</option>
                         </select>
+                      </div>
+
 
                       <a href="javascript:;" class="btn btn-primary btn-round">Actualizar</a>
                       <a href="javascript:;" class="btn btn-primary btn-round">Registrar</a>
