--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -61,9 +61,20 @@ The above copyright notice and this permission notice shall be included in all c
                 <div class="col-md-4">
                   <div class="card card-profile">
                     <div class="card-body">
-                      
                       <div>
-                        <h6 class="card-category text-gray">Locacion</h6>
+                        <h6 class="card-category text-gray">Nombre Locacion</h6>
+                        <input type="text" class="form-control">
+                      </div>
+                      <div>
+                        <h6 class="card-category text-gray">Numero de paquete</h6>
+                        <select name="" id="" class="custom-select">
+                          <option value="1">jklñ</option>
+                          <option value="2"  selected>jklñ</option>
+                          <option value="3">jklñ</option>
+                        </select>
+                      </div>
+                      <div>
+                        <h6 class="card-category text-gray">Guia de programación</h6>
                         <select name="" id="">
                           <option value="1">jklñ</option>
                           <option value="2"  selected>jklñ</option>
@@ -71,30 +82,14 @@ The above copyright notice and this permission notice shall be included in all c
                         </select>
                       </div>
                       <div>
-                        <h6 class="card-category text-gray">Locacion</h6>
-                        <select name="" id="">
-                          <option value="1">jklñ</option>
-                          <option value="2"  selected>jklñ</option>
-                          <option value="3">jklñ</option>
-                        </select>
-                      </div>
-                      <div>
-                        <h6 class="card-category text-gray">Locacion</h6>
-                        <select name="" id="">
-                          <option value="1">jklñ</option>
-                          <option value="2"  selected>jklñ</option>
-                          <option value="3">jklñ</option>
-                        </select>
-                      </div>
-                      <div>
-                        <h6 class="card-category text-gray">Locacion</h6>
+                        <h6 class="card-category text-gray">Menu</h6>
                         <select name="" id="">
                           <option value="1">jklñ</option>
                           <option value="2"  selected>jklñ</option>
                           <option value="3">jklñ</option>
                         </select>
                       </div>                      <div>
-                        <h6 class="card-category text-gray">Locacion</h6>
+                        <h6 class="card-category text-gray">Mensajes</h6>
                         <select name="" id="">
                           <option value="1">jklñ</option>
                           <option value="2"  selected>jklñ</option>
@@ -102,7 +97,7 @@ The above copyright notice and this permission notice shall be included in all c
                         </select>
                       </div>
                       <div>
-                        <h6 class="card-category text-gray">Locacion</h6>
+                        <h6 class="card-category text-gray">Pantalla de inicio</h6>
                         <select name="" id="">
                           <option value="1">jklñ</option>
                           <option value="2"  selected>jklñ</option>
@@ -110,7 +105,7 @@ The above copyright notice and this permission notice shall be included in all c
                         </select>
                       </div>
                       <div>
-                        <h6 class="card-category text-gray">Locacion</h6>
+                        <h6 class="card-category text-gray">Paquete asignado</h6>
                         <select name="" id="">
                           <option value="1">jklñ</option>
                           <option value="2"  selected>jklñ</option>
