--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -63,53 +63,41 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="card-body">
                       <div>
                         <h6 class="card-category text-gray">Nombre Locacion</h6>
-                        <input type="text" class="form-control">
+                        <input type="text" id="NameLocation" class="form-control" placeholder="Inserte nombre locaciom">
                       </div>
                       <div>
                         <h6 class="card-category text-gray">Numero de paquete</h6>
-                        <select name="" id="" class="custom-select">
-                          <option value="1">jklñ</option>
-                          <option value="2"  selected>jklñ</option>
-                          <option value="3">jklñ</option>
+                        <select name="NumPackage" id="NumPackage" class="custom-select">
+                          <option value="0" selected>Seleccione un paquete</option>
                         </select>
                       </div>
                       <div>
                         <h6 class="card-category text-gray">Guia de programación</h6>
-                        <select name="" id="">
-                          <option value="1">jklñ</option>
-                          <option value="2"  selected>jklñ</option>
-                          <option value="3">jklñ</option>
+                        <select name="Epg" id="Epg">
+                          <option value="0" selected>Seleccione estado de la guia</option>
                         </select>
                       </div>
                       <div>
                         <h6 class="card-category text-gray">Menu</h6>
-                        <select name="" id="">
-                          <option value="1">jklñ</option>
-                          <option value="2"  selected>jklñ</option>
-                          <option value="3">jklñ</option>
+                        <select name="Menu" id="Menu" class="custom-select">
+                          <option value="0" selected>Seleccione estado del menu</option>
                         </select>
                       </div>                      <div>
                         <h6 class="card-category text-gray">Mensajes</h6>
-                        <select name="" id="">
-                          <option value="1">jklñ</option>
-                          <option value="2"  selected>jklñ</option>
-                          <option value="3">jklñ</option>
+                        <select name="Messages" id="Messages" class="custom-select">
+                          <option value="0" selected>Seleccione estado de los mensajes</option>
                         </select>
                       </div>
                       <div>
                         <h6 class="card-category text-gray">Pantalla de inicio</h6>
-                        <select name="" id="">
-                          <option value="1">jklñ</option>
-                          <option value="2"  selected>jklñ</option>
-                          <option value="3">jklñ</option>
+                        <select name="InitScreen" id="InitScreen" class="custom-select">
+                          <option value="0" selected>Seleccione modulo de inicio</option>
                         </select>
                       </div>
                       <div>
                         <h6 class="card-category text-gray">Paquete asignado</h6>
-                        <select name="" id="">
-                          <option value="1">jklñ</option>
-                          <option value="2"  selected>jklñ</option>
-                          <option value="3">jklñ</option>
+                        <select name="Package" id="Package">
+                          <option value="0"  selected>Seleccione paquete</option>
                         </select>
                       </div>
 
