--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -63,7 +63,7 @@ The above copyright notice and this permission notice shall be included in all c
                     <div class="card-body">
                       <div>
                         <h6 class="card-category text-gray">Nombre Locacion</h6>
-                        <input type="text" id="NameLocation" class="form-control" placeholder="Inserte nombre locaciom">
+                        <input type="text" id="NameLocation" class="form-control" placeholder="Inserte nombre locacion">
                       </div>
                       <div>
                         <h6 class="card-category text-gray">Numero de paquete</h6>
@@ -73,7 +73,7 @@ The above copyright notice and this permission notice shall be included in all c
                       </div>
                       <div>
                         <h6 class="card-category text-gray">Guia de programación</h6>
-                        <select name="Epg" id="Epg">
+                        <select name="Epg" id="Epg" class="custom-select">
                           <option value="0" selected>Seleccione estado de la guia</option>
                         </select>
                       </div>
@@ -96,7 +96,7 @@ The above copyright notice and this permission notice shall be included in all c
                       </div>
                       <div>
                         <h6 class="card-category text-gray">Paquete asignado</h6>
-                        <select name="Package" id="Package">
+                        <select name="Package" id="Package" class="custom-select">
                           <option value="0"  selected>Seleccione paquete</option>
                         </select>
                       </div>
