--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -221,6 +221,7 @@ function getLocations(){
   });
 
   getTables();
+  selectLocation();
   
   }
 
@@ -277,6 +278,17 @@ function getInfo(){
       AllPackages  = $.parseJSON(response);
     }
   }); 
+}
+
+function selectLocation(){
+  $('#LocationsTable tbody').on('click', 'tr', function(){
+    if ($(this).hasClass('selected')) {
+      $(this).removeClass('selected');
+  } else {
+      $('#DevicesList').DataTable().$('tr.selected').removeClass('selected');
+      $(this).addClass('selected');
+  }
+  });
 }
 </script>
 
