--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -186,7 +186,7 @@ The above copyright notice and this permission notice shall be included in all c
     console.log(AllLocations);
     getLocations();
 
-    let TableBody = document.getElementsByTagName('tbody');
+    let TableBody = document.getElementsByTagName('tr');
     let TableBodyChildren = TableBody.children;
 
     console.log(TableBodyChildren);
