--- a/Views/Layouts/Contents/Templates/Locations.html
+++ b/Views/Layouts/Contents/Templates/Locations.html
@@ -185,6 +185,7 @@ The above copyright notice and this permission notice shall be included in all c
     console.log(AllPackages);
     console.log(AllLocations);
     getLocations();
+    debugger
 
     let TableBody = document.getElementsByTagName('tr');
     let TableBodyChildren = TableBody.children;
